# ada

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
cmake/: FindBROADCOM.cmake  FindCocoa.cmake  FindCoreVideo.cmake  FindEGL.cmake  FindFFMPEG.cmake  FindGBM.cmake  FindGLESv2.cmake  FindILCLIENT.cmake  FindIOKit.cmake  FindMMAL.cmake  FindOMAX.cmake  FindPkgMacros.cmake
examples/: CMakeLists.txt  hello_world.cpp
include/ada/: app.h  draw.h  font.h  fs.h  list.h  math.h  pixel.h  scene.h  string.h  time.h  window.h
include/ada/geom/: boundingBox.h  line.h  mesh.h  meshes.h  ops.h  triangle.h
include/ada/gl/: convolutionPyramid.h  defines.h  draw.h  face.h  fbo.h  gl.h  mesh.h  meshes.h  pingpong.h  props.h  pyramid.h  render.h  shader.h  texture.h  textureAudio.h  textureBump.h  textureCube.h  textureProps.h  textureStream.h  textureStreamAV.h  textureStreamAudio.h  textureStreamMMAL.h  textureStreamOMX.h  textureStreamSequence.h  vbo.h  vertexLayout.h
include/ada/io/: gltf.h  obj.h  ply.h  stl.h
include/ada/scene/: camera.h  label.h  light.h  material.h  model.h  node.h  sky.h
include/ada/shaders/: cubemap.h  default.h  defaultShaders.h  default_scene.h  draw.h  dynamic_billboard.h  plot.h  points.h  poissonfill.h
include/ada/tools/: font.h  fs.h  geom.h  holoplay.h  math.h  pixels.h  text.h
src/: CMakeLists.txt  app.cpp  draw.cpp  font.cpp  fs.cpp  list.cpp  pixel.cpp  scene.cpp  string.cpp  time.cpp  window.cpp
src/devices/: holoPlay.cpp
src/geom/: line.cpp  mesh.cpp  meshes.cpp  ops.cpp  triangle.cpp
src/gl/: convolutionPyramid.cpp  defines.cpp  draw.cpp  fbo.cpp  gl.cpp  mesh.cpp  meshes.cpp  pingpong.cpp  props.cpp  pyramid.cpp  render.cpp  shader.cpp  texture.cpp  textureAudio.cpp  textureBump.cpp  textureCube.cpp  textureProps.cpp  textureStreamAV.cpp  textureStreamAudio.cpp  textureStreamMMAL.cpp  textureStreamOMX.cpp  textureStreamSequence.cpp  vbo.cpp  vertexLayout.cpp
src/io/: gltf.cpp  obj.cpp  ply.cpp  stl.cpp
src/scene/: camera.cpp  label.cpp  light.cpp  material.cpp  model.cpp  node.cpp  sky.cpp
src/shaders/: defaultShaders.cpp
src/tools/: env.cpp  font.cpp  fs.cpp  geom.cpp  holoplay.cpp  list.cpp  pixels.cpp  text.cpp  time.cpp
